--- a/css/rwd/rwd_story.css
+++ b/css/rwd/rwd_story.css
@@ -88,6 +88,8 @@
         width: 70%;
         display: block;
         margin-top: 200px;
+        width: 100%;
+        overflow: hidden;
     }
 
     .emily img {
@@ -516,7 +518,9 @@
     }
 
     .story_bg {
-        height: 400px;
+        height: 250px;
+        background-size:cover;
+        background-attachment:unset;
     }
 
     .whoweare {
